Task5/non-admin-api-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-allow
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: back-end-api
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: front-end
  egress:
  - to:
    - podSelector:
        matchLabels:
          role: front-end
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admin-api-allow
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: admin-back-end-api
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: admin-front-end
  egress:
  - to:
    - podSelector:
        matchLabels:
          role: admin-front-end



# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-frontend-to-backend
# spec:
#   podSelector:
#     matchLabels:
#       role: back-end-api
#   policyTypes:
#   - Ingress
#   ingress:
#   - from:
#       - podSelector:
#           matchLabels:
#             app: front-end 
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: admin-allow-frontend-to-backend
# spec:
#   podSelector:
#     matchLabels:
#       role: admin-back-end-api
#   policyTypes:
#   - Ingress
#   ingress:
#   - from:
#       - podSelector:
#           matchLabels:
#             app: admin-front-end
